fix(localisation-select): various keyboard and styling issues
+ couldnt use keyboard with it, it was a combobox when needed
to be a select box
+ no label for the select box
+ the little arrow on the dropdown was not showing
+ updated styling to mirror stock select boxes better

in general i think this component will need more work, perhaps
a rethink in terms of design as it seems more like a navigation
menu than a select box

--- a/web/src/components/visually-hidden/visually-hidden.css
+++ b/web/src/components/visually-hidden/visually-hidden.css
@@ -1,3 +1,7 @@
+/*
+  stolen from GOV.UK
+  https://github.com/alphagov/govuk-frontend/blob/main/src/govuk/helpers/_visually-hidden.scss
+*/
 .visually-hidden {
     position: absolute !important;
     width: 1px !important;
